Settings: support per-app volume [3/3]
Change-Id: Idde059f1ad96aecff0f10e2e9f9b88ff211b80ef
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -360,4 +360,9 @@
     <string name="search_menu_title">Search</string>
     <string name="search_settings">Search</string>
 
+    <!-- Per-app volume control -->
+    <string name="app_volume">App volume</string>
+    <string name="app_volume_title">Per-app volume control</string>
+    <string name="app_volume_summary">Allow to set different volume levels for each app</string>
+
 </resources>
