--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -352,4 +352,12 @@
     <string name="qs_footer_datausage_title">Data usage</string>
     <string name="qs_footer_datausage_summary">Display data usage summary in quick settings footer</string>
 
+    <!-- Circle to Search -->
+    <string name="search_gesture_category_title">Search</string>
+    <string name="search_gesture_feature_summary">Touch and hold the Home button or the navigation handle to search using the content on your screen.</string>
+    <string name="search_gesture_feature_title">Circle to Search</string>
+    <string name="search_menu">Search settings</string>
+    <string name="search_menu_title">Search</string>
+    <string name="search_settings">Search</string>
+
 </resources>
