--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -347,4 +347,9 @@
     <string name="private_dns_mode_adguard" translatable="false">AdGuard DNS</string>
     <!-- AdGuard DNS hostname -->
     <string name="private_dns_hostname_adguard" translatable="false">dns.adguard.com</string>
+
+    <!-- Data usage info in QS footer -->
+    <string name="qs_footer_datausage_title">Data usage</string>
+    <string name="qs_footer_datausage_summary">Display data usage summary in quick settings footer</string>
+
 </resources>
