--- a/res/xml/network_provider_internet.xml
+++ b/res/xml/network_provider_internet.xml
@@ -126,4 +126,13 @@
         android:summary="@string/cellular_security_summary"
         android:order="30"
         settings:controller="com.android.settings.network.CellularSecurityPreferenceController"/>
+
+    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        android:key="qs_footer_data_usage"
+        android:title="@string/qs_footer_datausage_title"
+        android:summary="@string/qs_footer_datausage_summary"
+        android:icon="@drawable/ic_settings_data_usage"
+        android:order="50"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
