Settings: Display RvOS version in device info
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -16,6 +16,9 @@
     <!-- RvOS Maintainer -->
     <string name="rvos_maintainer">Maintainer</string>
 
+    <!-- RvOS Version -->
+    <string name="rvos_version">RvOS version</string>
+
     <!-- Android debugging as root -->
     <string name="adb_enable_root">Rooted debugging</string>
     <string name="adb_enable_summary_root">Allow running Android debugging as root</string>
