--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -30,6 +30,14 @@
         settings:searchable="false"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
 
+    <!-- RvOS version -->
+    <Preference
+        android:key="rvos_version"
+        android:title="@string/rvos_version"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.RvOSVersionPreferenceController"/>
+
     <!-- RvOS Maintainer -->
     <Preference
         android:key="rvos_maintainer"
